<resources>
    <string name="app_name">Tesma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list">List</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="irpan">Irpan</string>
    <string name="intership_test">Intership Test</string>
    <string name="detail_gallery">Detail Gallery</string>
    <string name="detail_place">Detail Place</string>
</resources>