<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/placesFragment">

    <fragment
        android:id="@+id/placesFragment"
        android:name="id.itborneo.testmagangandroidv4.menu.list.views.FragmentList"
        android:label="@string/list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_placesFragment_to_detailPlaceFragment"
            app:destination="@id/detailPlaceFragment" />
        <action
            android:id="@+id/action_placesFragment_to_fragmentMultipleDetail"
            app:destination="@id/fragmentMultipleDetail" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment"
        android:name="id.itborneo.testmagangandroidv4.menu.gallery.views.FragmentGallery"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_galleryFragment_to_galleryDetailFragment"
            app:destination="@id/galleryDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="id.itborneo.testmagangandroidv4.menu.profile.views.FragmentProfile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailPlaceFragment"
        android:name="id.itborneo.testmagangandroidv4.menu.list.views.FragmentSingleDetail"
        android:label="@string/detail_place"
        tools:layout="@layout/fragment_single_detail">
        <argument
            android:name="dataPlace"
            android:defaultValue="@null"
            app:argType="id.itborneo.testmagangandroidv4.menu.list.models.PlaceModel"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/galleryDetailFragment"
        android:name="id.itborneo.testmagangandroidv4.menu.gallery.views.FragmentGalleryDetail"
        android:label="@string/detail_gallery"
        tools:layout="@layout/fragment_gallery_detail" />
    <fragment
        android:id="@+id/fragmentMultipleDetail"
        android:name="id.itborneo.testmagangandroidv4.menu.list.views.FragmentMultipleDetail"
        android:label="fragment_multiple_detail"
        tools:layout="@layout/fragment_multiple_detail">
        <argument
            android:name="dataPlace"
            android:defaultValue="@null"
            app:argType="id.itborneo.testmagangandroidv4.menu.list.models.PlaceModel"
            app:nullable="true" />
    </fragment>
</navigation>